<package format="2">
  <name>image_publisher</name>
  <version>2.0.0</version>
  <description>
    <p>
      Contains a node publish an image stream from single image file
      or avi motion file.
    </p>
  </description>
  <author>Kei Okada</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <maintainer email="chris.ye@intel.com">Chris Ye</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/image_publisher</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
